ProyectoFinal/force-app/main/default/objects/Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>Estimated Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectResource__c</fullName>
        <label>Project Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>ProjectResource__c.ProjectLineItem__r.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectResource__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <valueField>Project__c.ProjectResource__r.User__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RegisterHours__c</fullName>
        <label>Register Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started yet</fullName>
                    <default>true</default>
                    <label>Not started yet</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Project__c</columns>
        <columns>EndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>ProjectResource__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignment_Not_Allow</fullName>
        <active>true</active>
        <description>Assignment Not Allow if Project Not Progress</description>
        <errorConditionFormula>ISPICKVAL( Project__r.Status__c, &quot;Pre-Kickoff&quot;)</errorConditionFormula>
        <errorMessage>The project is not &quot;In Progress&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Out_Of_Project_Range</fullName>
        <active>true</active>
        <errorConditionFormula>OR( StartDate__c   &lt;   Project__r.Start_Date__c , EndDate__c   &gt;   Project__r.End_Date__c)</errorConditionFormula>
        <errorMessage>Date out of project range.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_creation_allowed</fullName>
        <active>false</active>
        <description>Only a Squad Lead can create tasks</description>
        <errorConditionFormula>ProjectResource__r.Squad_Lead__c  = false</errorConditionFormula>
        <errorMessage>Only Squad Leads are allow to create tasks</errorMessage>
    </validationRules>
</CustomObject>