ProyectoFinal/force-app/main/default/objects/Project_Task__c/validationRules/Assignment_Not_Allow.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Not_Allow</fullName>
    <active>true</active>
    <description>Assignment Not Allow if Project Not Progress</description>
    <errorConditionFormula>ISPICKVAL( Project__r.Status__c, &quot;Pre-Kickoff&quot;)</errorConditionFormula>
    <errorMessage>The project is not &quot;In Progress&quot;</errorMessage>
</ValidationRule>