ProyectoFinal/force-app/main/default/objects/Project_Task__c/validationRules/Date_Out_Of_Project_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Out_Of_Project_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR( StartDate__c   &lt;   Project__r.Start_Date__c , EndDate__c   &gt;   Project__r.End_Date__c)</errorConditionFormula>
    <errorMessage>Date out of project range.</errorMessage>
</ValidationRule>