ProyectoFinal/force-app/main/default/objects/Project_Task__c/validationRules/Not_creation_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_creation_allowed</fullName>
    <active>false</active>
    <description>Only a Squad Lead can create tasks</description>
    <errorConditionFormula>ProjectResource__r.Squad_Lead__c  = false</errorConditionFormula>
    <errorMessage>Only Squad Leads are allow to create tasks</errorMessage>
</ValidationRule>