ProyectoFinal/force-app/main/default/objects/Project_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>State__c</columns>
    <columns>EndDate__c</columns>
    <columns>Project__c</columns>
    <columns>RegisterHours__c</columns>
    <columns>EstimatedHours__c</columns>
    <columns>ProjectResource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>